--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,26 @@
 
   <body>
     <header class="row">
-    <div>
-      <div class="col-3">
-      LOGO
+        <div class="col-3">
+        <div class="circle">
+        <br />
+        Sol Ring
+        <br />
+        Just 98 Cards
+        <br />
+        To Go!
+      </div>
     </div>
-       <div class="col-4">
+       <div class="col-4 slogan">
         Splurting out unsolicited advice about entrepreneurship since 2016
       </div>
-     <div class="col-5">
+     <div class="col-5 links">
         <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#' %>
       </div>
     </header>
 
+    <hr />
  <br class="clear" />
 
     <%= yield %>
