--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -22,14 +22,17 @@
     -ms-transform: rotate(11deg); /* IE 9 */
     -webkit-transform: rotate(11deg); /* Opera, Chrome, and Safari */
 }
+
 .slogan {
   font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
  font-style: italic;
  padding-top: 26px;
 }
+
 .links {
   padding-top: 26px;
 }
+
 .links a {
   color: black;
   font-size: 25px;
@@ -37,17 +40,34 @@
   font-family: 'rubikregular', sans-serif;
   font-weight: bold;
 }
+
 header {
   border-top: 9px solid #222222;
 }
+
 hr {
   clear:both;
 }
+
 h1 {
   font-family: 'rubikregular', sans-serif;
   font-weight: bold;
   font-size: 48px;
 }
+
 h2 {
  font-family: 'rubikmedium_italic', sans-serif;
+}
+
+.next-quote {
+  color:#f84342;
+  font-family: 'rubikmedium_italic', sans-serif;
+  font-size:20px;
+}
+
+.footer-blurb {
+  font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
+  font-style: italic;
+  text-align: right;
+  font-size: 12px;
 }
